# MiniChat_server

./: CMakeLists.txt  README.md  application.cpp  application.h  bincontroller.cpp  bincontroller.h  captcha.cpp  captcha.h  controller.cpp  controller.h  datahead.cpp  datahead.h  dbconnect.cpp  dbconnect.h  downconnect.cpp  downconnect.h  entity.cpp  entity.h  filecontroller.cpp  filecontroller.h  littlesmtp.cpp  littlesmtp.h  main.cpp  mapper.cpp  mapper.h  src.qrc  validconnect.cpp  validconnect.h  webconnect.cpp  webconnect.h  webconnectpool.cpp  webconnectpool.h  webmanager.cpp  webmanager.h  websocketconnect.cpp  websocketconnect.h  websocketcontroller.cpp  websocketcontroller.h  webtelecom.cpp  webtelecom.h
assets/: databse.config.txt  email.config.txt  server.config.txt  server_down.config.txt  sql.txt
design/: ~$接口.docx  ~$数据库表.docx  ~$规范.docx  接口.docx  数据库表.docx  规范.docx
